--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ South==0.7.6
 celery==3.0.15
 django-celery==3.0.11
 python-openid==2.2.5
+django-mptt==0.5
 -e git+git://code.h1svr.anu.edu.au/h1ds/django-openid-auth.git#egg=django_openid_auth-dev
 -e git+git://code.h1svr.anu.edu.au/h1ds/h1ds_configdb.git#egg=h1ds_configdb-dev
 -e git+git://code.h1svr.anu.edu.au/h1ds/h1ds_core.git#egg=h1ds_core-dev
 -e git+git://code.h1svr.anu.edu.au/h1ds/h1ds_mdsplus.git#egg=h1ds_mdsplus-dev
 -e git+git://code.h1svr.anu.edu.au/h1ds/h1ds_summary.git#egg=h1ds_summary-dev
+-e git+git://github.com/chrisspen/django-python-code-field.git#egg=python_field
 moin==1.9.6
 sphinx
 # for django-sphinxdoc
