--- a/fabfile.py.template
+++ b/fabfile.py.template
@@ -303,10 +303,9 @@ def update():
             # modify db and make sure we chown the db after to be sure.
             run('./manage.py syncdb --settings=%(settings)s' % env)
             run('./manage.py collectstatic --noinput --settings=%(settings)s' % env)
-            run("./manage.py migrate h1ds_core --settings=%(settings)s" % env)
-            run("./manage.py migrate h1ds_mdsplus --settings=%(settings)s" % env)
-            run("./manage.py migrate h1ds_summary --settings=%(settings)s" % env)
-            run("./manage.py migrate h1ds_configdb --settings=%(settings)s" % env)
+            run("./manage.py migrate h1ds --settings=%(settings)s" % env)
+            run("./manage.py migrate summary --settings=%(settings)s" % env)
+            run("./manage.py migrate configdb --settings=%(settings)s" % env)
             run("./manage.py migrate kombu.transport.django --settings=%(settings)s" % env)
             run("./manage.py migrate djcelery --settings=%(settings)s" % env)
             run("./manage.py createtree %(test_mds_dir)s --settings=%(settings)s" % env)
