--- a/fabfile.py.template
+++ b/fabfile.py.template
@@ -323,7 +323,7 @@ def update():
                 run("django-admin.py syncdb")
                 run("django-admin.py collectstatic --noinput")
                 run("django-admin.py migrate")
-                run("django-admin.py createtree %(test_mds_dir)s" % env)
+                #run("django-admin.py createtree %(test_mds_dir)s" % env)
     
     # Now that we  have finished making changes to  the database, change
     # the permissions back to those appropriate for the server.
