--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -9,3 +9,4 @@ django-mptt==0.5
 -e git+https://github.com/h1ds/django-openid-auth.git#egg=django_openid_auth-dev
 moin==1.9.6
 -e hg+https://bitbucket.org/schinckel/django-python-code-field#egg=python_field
+djangorestframework==2.3.7
