--- a/h1ds/h1ds/settings/development.py.template
+++ b/h1ds/h1ds/settings/development.py.template
@@ -1,15 +1,23 @@
-from h1ds.settings import *
+from .base import *
 
-DEBUG = False
+DEBUG = True
 
 SECRET_KEY = '***ChangeMeToSomethingUnique***'
 
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.sqlite3',
-        'NAME': os.path.join(VENV_DIR, 'db', 'h1ds_staging.db')
+        'NAME': os.path.join(DJANGO_PROJECT_DIR, 'db', 'h1ds_development.db')
             }
     }
+
+
+H1DS_EXTRA_SUBLINKS = (
+    # ("Wiki", "/wiki", "Documentation wiki"),
+    # ("Activity", "/wiki/RecentChanges", "Latest changes to documentation"),
+    ("Code", "https://code.h1svr.anu.edu.au", "H1 code repository"),
+    ("H1DS Documentation", "/docs/h1ds", "Documentation for the H1DS server"),
+)
 
 ########################################################################
 ## Wiki settings                                                      ##
@@ -20,14 +28,3 @@ WIKI_EDITOR_GROUPS = [u"EditorGroup", ]
 # in the wiki. Please use CamelCase for all usernames.
 WIKI_SUPERUSERS = [u"MyUsername", ]
 WIKI_ACL_RIGHTS_BEFORE = u"MyUsername:read,write,delete,revert,admin EditorGroup:read,write,delete -All:write,delete,revert,admin"
-
-########################################################################
-## Settings which should be optional                                  ##
-########################################################################
-
-import h1.metadata
-H1DS_CONFIGDB_METADATA_FUNCTION = h1.metadata.read_metadata
-
-########################################################################
-## Optional settings                                                  ##
-########################################################################
