--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "h1ds/h1ds/static/js/libs/jsDataViewer"]
+[submodule "jsDataViewer"]
 	path = h1ds/h1ds/static/js/libs/jsDataViewer
 	url = https://github.com/dpretty/jsDataViewer.git
