--- a/h1ds/h1ds/settings/development.py.template
+++ b/h1ds/h1ds/settings/development.py.template
@@ -28,3 +28,7 @@ WIKI_EDITOR_GROUPS = [u"EditorGroup", ]
 # in the wiki. Please use CamelCase for all usernames.
 WIKI_SUPERUSERS = [u"MyUsername", ]
 WIKI_ACL_RIGHTS_BEFORE = u"MyUsername:read,write,delete,revert,admin EditorGroup:read,write,delete -All:write,delete,revert,admin"
+
+INSTALLED_APPS += ('localcrawler',)
+
+LOCALCRAWLER_ENTRY_POINT="/data"
