use separate sqlite db for summary database

--- a/h1ds/h1ds/settings/production.py.template
+++ b/h1ds/h1ds/settings/production.py.template
@@ -4,12 +4,10 @@ DEBUG = False
 
 SECRET_KEY = '***ChangeMeToSomethingUnique***'
 
-DATABASES = {
-    'default': {
+DATABASES['default'] = {
         'ENGINE': 'django.db.backends.sqlite3',
         'NAME': os.path.join(DJANGO_PROJECT_DIR, 'db', 'h1ds_production.db')
             }
-    }
 
 VERBOSE=0
 
