--- a/h1ds/h1ds/settings/development.py.template
+++ b/h1ds/h1ds/settings/development.py.template
@@ -4,12 +4,10 @@ DEBUG = True
 
 SECRET_KEY = '***ChangeMeToSomethingUnique***'
 
-DATABASES = {
-    'default': {
+DATABASES['default'] = {
         'ENGINE': 'django.db.backends.sqlite3',
         'NAME': os.path.join(DJANGO_PROJECT_DIR, 'db', 'h1ds_development.db')
             }
-    }
 
 
 H1DS_EXTRA_SUBLINKS = (
