--- a/h1ds/h1ds/gunicorn.sh.template
+++ b/h1ds/h1ds/gunicorn.sh.template
@@ -8,9 +8,10 @@ NUM_WORKERS=$(( 2 * $N_CORES + 1 ))
 USER=__user__
 GROUP=__group__
 ADDRESS=unix:/tmp/h1ds.gunicorn.sock
-export DJANGO_SETTINGS_MODULE=h1ds.settings___venv__
+export DJANGO_SETTINGS_MODULE=h1ds.settings.__venv__
 cd __venv_dir__
 source bin/activate
+export PYTHONPATH=$VIRTUAL_ENV/h1ds/h1ds:$PYTHONPATH
 test -d $LOGDIR || mkdir -p $LOGDIR
 #exec bin/gunicorn h1ds.wsgi:application -w $NUM_WORKERS \
 #    --user=$USER --group=$GROUP --log-level=info --bind=$ADDRESS \
