--- a/h1ds/h1ds/conf/nginx/h1ds_staging.conf.template
+++ b/h1ds/h1ds/conf/nginx/h1ds_staging.conf.template
@@ -21,17 +21,17 @@ server {
 
     # https://docs.djangoproject.com/en/dev/howto/static-files/#serving-static-files-in-production
     location /static/ { # STATIC_URL
-        alias __venv_dir__/static/; # STATIC_ROOT
+        alias __venv_dir__/h1ds/h1ds/static/; # STATIC_ROOT
         expires 30d;
     }
 
     location /media/ { # MEDIA_URL
-        alias __venv_dir__/media/; # MEDIA_ROOT
+        alias __venv_dir__/h1ds/h1ds/media/; # MEDIA_ROOT
         expires 30d;
     }
 
     location /admin-media/ {
-        alias __venv_dir__/media/admin/;
+        alias __venv_dir__/h1ds/h1ds/media/admin/;
         expires 30d;
     }
 
