--- a/h1ds/h1ds/conf/supervisord.staging.conf.template
+++ b/h1ds/h1ds/conf/supervisord.staging.conf.template
@@ -21,8 +21,8 @@ stderr_logfile = %(here)s/../../log/moin.err.log
 autorestart=true
 
 [program:celery]
-environment=DJANGO_SETTINGS_MODULE='h1ds.settings.development',PYTHONPATH='__venv_dir__/h1ds/h1ds'
-command=%(here)s/../../manage.py celeryd -v 2 -B --concurrency=1 --loglevel=INFO
+environment=DJANGO_SETTINGS_MODULE='h1ds.settings.staging',PYTHONPATH='__venv_dir__/h1ds/h1ds'
+command=__venv_dir__/bin/django-admin.py celeryd -v 2 -B --concurrency=1 --loglevel=INFO
 directory=%(here)s/../../
 ; user=nobody
 numprocs=1
